[package]
name = "figment_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.figment]
version = "0.10.6"
features = ["env"]
